<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2022 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<!-- Original code by Samsung, all rights reserved to the original author. -->

<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <!-- Label for the "Done" button on the far left of action mode toolbars. -->
    <string name="abc_action_mode_done">Done</string>
    <!-- Content description for the action bar "home" affordance. [CHAR LIMIT=NONE] -->
    <string name="abc_action_bar_home_description">Navigate home</string>
    <!-- Content description for the action bar "up" affordance. [CHAR LIMIT=NONE] -->
    <string name="abc_action_bar_up_description">Navigate up</string>
    <!-- Content description for the action menu overflow button. [CHAR LIMIT=NONE] -->
    <string name="abc_action_menu_overflow_description">More options</string>

    <!-- Content description for the Toolbar icon used to collapse an expanded action mode. [CHAR LIMIT=NONE] -->
    <string name="abc_toolbar_collapse_description">Collapse</string>

    <!-- SearchView accessibility description for search button [CHAR LIMIT=NONE] -->
    <string name="abc_searchview_description_search">Search</string>
    <!-- Default hint text for the system-wide search UI's text field. [CHAR LIMIT=30] -->
    <string name="abc_search_hint">Search…</string>
    <!-- SearchView accessibility description for search text field [CHAR LIMIT=NONE] -->
    <string name="abc_searchview_description_query">Search query</string>
    <!-- SearchView accessibility description for clear button [CHAR LIMIT=NONE] -->
    <string name="abc_searchview_description_clear">Clear query</string>
    <!-- SearchView accessibility description for submit button [CHAR LIMIT=NONE] -->
    <string name="abc_searchview_description_submit">Submit query</string>
    <!-- SearchView accessibility description for voice button [CHAR LIMIT=NONE] -->
    <string name="abc_searchview_description_voice">Voice search</string>

    <!-- ActivityChooserView - accessibility support -->
    <!-- Description of the shwoing of a popup window with activities to choose from. [CHAR LIMIT=NONE] -->
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <!-- Title for a button to expand the list of activities in ActivityChooserView [CHAR LIMIT=25] -->
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <!-- Description of a share target (both in the list of such or the default share button) in a ShareActionProvider (share UI). [CHAR LIMIT=NONE] -->
    <string name="abc_shareactionprovider_share_with_application">Share with <xliff:g id="application_name" example="Mail">%s</xliff:g></string>
    <!-- Description of the choose target button in a ShareActionProvider (share UI). [CHAR LIMIT=NONE] -->
    <string name="abc_shareactionprovider_share_with">Share with</string>

    <!-- Default text for a button that can be toggled on and off. -->
    <string name="abc_capital_on">ON</string>
    <!-- Default text for a button that can be toggled on and off. -->
    <string name="abc_capital_off">OFF</string>
    <string name="search_menu_title">Search</string>

    <!-- Prepended to the shortcut for a menu item to indicate that the user should hold the MENU button together with the shortcut to invoke the item. For example, if the shortcut to open a new tab in browser is MENU and B together, then this would be prepended to the letter "B" -->
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <!-- Prepended to the shortcut for a menu item to indicate that the user should hold the META key together with the shortcut to invoke the item. -->
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <!-- Prepended to the shortcut for a menu item to indicate that the user should hold the CTRL key together with the shortcut to invoke the item. -->
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <!-- Prepended to the shortcut for a menu item to indicate that the user should hold the ALT key together with the shortcut to invoke the item. -->
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <!-- Prepended to the shortcut for a menu item to indicate that the user should hold the SHIFT key together with the shortcut to invoke the item. -->
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <!-- Prepended to the shortcut for a menu item to indicate that the user should hold the SYM key together with the shortcut to invoke the item. -->
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <!-- Prepended to the shortcut for a menu item to indicate that the user should hold the FUNCTION key together with the shortcut to invoke the item. -->
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <!-- Displayed in place of the regular shortcut letter when a menu item has Menu+space for the shortcut. -->
    <string name="abc_menu_space_shortcut_label">space</string>
    <!-- Displayed in place of the regular shortcut letter when a menu item has Menu+enter for the shortcut. -->
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <!-- Displayed in place of the regular shortcut letter when a menu item has Menu+delete for the shortcut. -->
    <string name="abc_menu_delete_shortcut_label">delete</string>

    <string name="sesl_action_bar_home_description">Navigate home</string>
    <string name="sesl_action_bar_home_description_format">%1$s, %2$s</string>
    <string name="sesl_action_bar_home_subtitle_description_format">%1$s, %2$s, %3$s</string>
    <string name="sesl_action_bar_up_description">Navigate up</string>

    <string name="sesl_action_menu_overflow_badge_description">New content available</string>
    <string name="sesl_action_menu_overflow_badge_text_n">N</string>
    <string name="sesl_action_menu_overflow_description">More options</string>

    <string name="sesl_action_mode_done">Done</string>

    <string name="sesl_activity_chooser_view_see_all">See all</string>
    <string name="sesl_activitychooserview_choose_application">Choose an app</string>

    <string name="sesl_capital_off">OFF</string>
    <string name="sesl_capital_on">ON</string>

    <string name="sesl_font_family_bold" translatable="false">sans-serif</string>
    <string name="sesl_font_family_light" translatable="false">sans-serif-light</string>
    <string name="sesl_font_family_medium" translatable="false">sec-roboto-light</string>
    <string name="sesl_font_family_regular" translatable="false">sec-roboto-light</string>

    <string name="sesl_index_assistant_text">Swipe up or down with two finger to adjust</string>
    <string name="sesl_index_scrollbar">Scroll bar</string>
    <string name="sesl_index_section">Section index</string>
    <string name="sesl_index_selected">selected</string>

    <string name="sesl_more_item_label">More</string>

    <string name="sesl_search_hint">Search…</string>
    <string name="sesl_search_menu_title">Search</string>
    <string name="sesl_searchview_description_clear">Clear search field</string>
    <string name="sesl_searchview_description_query">Search query</string>
    <string name="sesl_searchview_description_search">Search</string>
    <string name="sesl_searchview_description_submit">Submit query</string>
    <string name="sesl_searchview_description_voice">Voice search</string>

    <string name="sesl_shareactionprovider_share_with">Share with</string>
    <string name="sesl_shareactionprovider_share_with_application">Share with %s</string>

    <string name="sesl_switch_off">Off</string>
    <string name="sesl_switch_on">On</string>

    <string name="sesl_switchbar_off_text">Off</string>
    <string name="sesl_switchbar_on_text">On</string>

    <string name="sesl_text_style_medium" translatable="false">1</string>
    <string name="sesl_toolbar_collapse_description">Collapse</string>

</resources>