<?xml version="1.0" encoding="utf-8"?>
<!--
/*
 * Copyright (C) 2022 The Android Open Source Project
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *      http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

-->
<!-- Original code by Samsung, all rights reserved to the original author. -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/search_bar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

    <!-- This is actually used for the badge icon *or* the badge label (or neither) -->
    <TextView
            android:id="@+id/search_badge"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:layout_marginBottom="2dip"
            android:drawablePadding="0dip"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="?android:attr/textColorPrimary"
            android:visibility="gone" />

    <ImageView
            android:id="@+id/search_button"
            style="?attr/actionButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:focusable="true"
            android:contentDescription="@string/sesl_searchview_description_search" />

    <LinearLayout
        android:id="@+id/search_edit_frame"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_vertical"
        android:orientation="horizontal"
        android:layoutDirection="locale">

        <LinearLayout
            android:id="@+id/search_plate"
            android:layout_width="match_parent"
            android:layout_height="@dimen/sesl_search_plate_height"
            android:layout_marginStart="@dimen/sesl_search_margin_start"
            android:layout_marginTop="@dimen/sesl_search_plate_margin"
            android:layout_marginEnd="@dimen/sesl_search_margin_end"
            android:layout_marginBottom="@dimen/sesl_search_plate_margin"
            android:paddingStart="20dp"
            android:paddingEnd="10dp"
            android:layout_gravity="center_vertical"
            android:weightSum="1.0"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/search_back_btn"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginEnd="12dp"
                android:layout_gravity="center_vertical"
                android:background="@drawable/sesl_search_icon_background_borderless"
                android:focusable="true"
                android:src="@drawable/sesl_ic_search_back"
                android:scaleType="centerInside"
                android:contentDescription="@string/sesl_action_bar_up_description"
                android:visibility="gone" />

            <ImageView
                android:id="@+id/search_mag_icon"
                android:layout_width="@dimen/sesl_search_view_icon_width"
                android:layout_height="@dimen/sesl_search_view_icon_height"
                android:scaleType="centerInside"
                android:layout_gravity="center_vertical"
                android:visibility="gone"
                android:tint="@color/sesl_search_view_icon_color"
                style="@style/RtlOverlay.Widget.AppCompat.SearchView.MagIcon" />

            <view class="androidx.appcompat.widget.SearchView$SearchAutoComplete"
                android:id="@+id/search_src_text"
                android:layout_height="match_parent"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:minWidth="@dimen/sesl_search_view_text_min_width"
                android:layout_gravity="center_vertical"
                android:paddingStart="4dp"
                android:textSize="@dimen/sesl_search_view_search_text_size"
                android:ellipsize="end"
                android:background="@null"
                android:maxLines="1"
                android:maxLength="1000"
                android:inputType="textAutoComplete|textNoSuggestions"
                android:imeOptions="actionSearch"
                android:nextFocusForward="@id/search_back_btn"
                android:dropDownHeight="wrap_content"
                android:dropDownAnchor="@id/search_plate"
                android:dropDownVerticalOffset="1dip"
                android:dropDownHorizontalOffset="0dip" />

            <ImageView
                android:id="@+id/search_close_btn"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:paddingStart="10dip"
                android:paddingEnd="10dip"
                android:layout_gravity="center_vertical"
                android:background="@drawable/sesl_search_icon_background_borderless"
                android:focusable="true"
                android:contentDescription="@string/sesl_searchview_description_clear" />

            <ImageView
                android:id="@+id/search_go_btn"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:paddingStart="10dip"
                android:paddingEnd="10dip"
                android:background="@drawable/sesl_search_icon_background_borderless"
                android:visibility="gone"
                android:focusable="true"
                android:contentDescription="@string/sesl_searchview_description_submit" />

            <ImageView
                android:id="@+id/search_voice_btn"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:paddingStart="10dip"
                android:paddingEnd="10dip"
                android:background="@drawable/sesl_search_icon_background_borderless"
                android:visibility="gone"
                android:focusable="true"
                android:contentDescription="@string/sesl_searchview_description_voice" />

            <ImageView
                android:id="@+id/search_more_btn"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:paddingStart="10dip"
                android:paddingEnd="10dip"
                android:background="@drawable/sesl_search_icon_background_borderless"
                android:visibility="gone"
                android:focusable="true"
                android:src="@drawable/sesl_ic_search_more"
                android:contentDescription="@string/sesl_action_menu_overflow_description" />

            <LinearLayout
                android:id="@+id/submit_area"
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"/>
        </LinearLayout>

    </LinearLayout>

</LinearLayout>
